--- a/blogPage.html
+++ b/blogPage.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Linked scripted to html file-->
-    <script src="./assets/script.js"></script>
+
     <!--Linked stylesheets to html file-->
     <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
@@ -15,13 +14,24 @@
 <body>
     <header>
         <h1>My First Blog</h1>
+        <!--Created back button that redirects back to the Form Submission page-->
         <a href="./index.html">
             <button onclick="window.location.href = './index.html';">Back</button>
         </a>
         <button id="themeMode">🔅</button>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <ul id="blogThread">
+            <li></li>
+        </ul>
+
+    </main>
+    <footer>
+
+
+    </footer>
+    <!--Linked scripted to html file-->
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
