pushing page that is barely running as intended

--- a/blogPage.html
+++ b/blogPage.html
@@ -20,18 +20,17 @@
         </a>
         <button id="themeMode">🔅</button>
     </header>
-    <main>
-        <ul id="blogThread">
-            <li></li>
-        </ul>
-
-    </main>
+    <article>
+        <p>Username: <span id="uName"></span></p>
+        <p>Title: <span id="bTitle"></span></p>
+        <p>Comment: <span id="content"></span></p>
+    </article>
     <footer>
 
 
     </footer>
     <!--Linked scripted to html file-->
-    <script src="./assets/script.js"></script>
+    <script src="./assets/scriptBlogs.js"></script>
 </body>
 
 </html>
