--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <label for="uName">Username</label><br>
         <input type="text" name="uName" id="uName"><br>
         <label for="bTitle">Title</label><br>
-        <input type="text" id="bTitle"><br>
+        <input type="text" name="bTitle" id="bTitle"><br>
         <label for="content">Content</label><br>
-        <input type="text" id="content"><br>
+        <input type="text" name="content" id="content"><br>
         <button id="submitBlog">Submit</button>
     </form>
 
     <!--Linked scripted to html file-->
-    <script src="./assets/script.js"></script>
+    <script src="./assets/scriptIndex.js"></script>
 </body>
 
 </html>
