updated code so arrays are not being overwritten

--- a/blogPage.html
+++ b/blogPage.html
@@ -20,10 +20,8 @@
         </a>
         <button id="themeMode">🔅</button>
     </header>
-    <article>
-        <p>Username: <span id="uName"></span></p>
-        <p>Title: <span id="bTitle"></span></p>
-        <p>Comment: <span id="content"></span></p>
+    <article id="blogThread">
+
     </article>
     <footer>
 
