updated html file to include footer as well as updated style for borders of the section of the webpages

--- a/blogPage.html
+++ b/blogPage.html
@@ -24,8 +24,7 @@
 
     </article>
     <footer>
-
-
+        <a href="https://bocampo.github.io/Challenge-02/">My Portfolio</a>
     </footer>
     <!--Linked scripted to html file-->
     <script src="./assets/scriptBlogs.js"></script>
